fixed whitespace and alignment

--- a/css.css
+++ b/css.css
@@ -5,6 +5,7 @@
 
 body {
     border-top: 50px;
+    margin: 0px;
 }
 
 .outside {
@@ -17,8 +18,7 @@ body {
     position: relative;
     left: 20%;
     box-shadow: 0px 0px 40px rgb(0 0 0 / 50%);
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 0px;
     padding: 25px;
 }
 
@@ -74,13 +74,13 @@ td {
 
 table {
     border: 5px solid black;
-    width: 60%;
+    width: 100%;
+    table-layout: fixed;
 }
 
 th {
     text-align: left;
     background-color: rgb(120, 119, 119);
-    width: 100px;
 }
 
 td {
@@ -88,7 +88,7 @@ td {
 }
 
 .timeColumn {
-    width: auto;
+    width: 10%;
 }
 
 .commute {
@@ -123,9 +123,12 @@ tr:nth-child(even) {
 .schedule {
     position: relative;
     left: 20%;
+    width: 60%;
 }
 
 .schedule h2 {
     position: relative;
-    left: 20%;
+    width: inherit;
+    text-align: center;
+
 }
